<resources>
    <string name="app_name">The Cocktail App</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="directions">Directions</string>
    <string name="dummy_text">fdsjf ldskf jalf lkds jfaldjf a;ls jflak flaks jf;lajds flkas jflaks jf;la jflkas jf;lksa flksa jflksa jflas jf;las flkds flas fldsa f</string>
    <string name="ingredients">Ingredients</string>
    <string name="placeholder">Placeholder</string>
    <string name="try_it">Try it!</string>
    <string name="home">Home</string>
    <string name="search_by_name">Search by Name</string>
    <string name="search_by_ingredient">Search by Ingredient</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_a_cocktail">Image of a Cocktail.</string>
    <string name="the_cocktail_app_icon">The Cocktail App icon</string>
    <string name="WebUrl">https://www.thecocktaildb.com/</string>
    <string name="api_the_cocktail_db">Api: The Cocktail DB</string>
    <string name="patrick_j_normile">Patrick J Normile</string>
    <string name="copyright_2023">Copyright 2023</string>
    <string name="search_tool_menu">Search</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="name_of_a_cocktail">Name of a cocktail</string>
    <string name="search_for_a_cocktail_by_name">Search for a cocktail by name:</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
</resources>