<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"/>
        <item android:id="@+id/nav_search_name"
            android:title="@string/search_by_name"
            android:icon="@drawable/baseline_manage_search_24"/>
        <item android:id="@+id/nav_search_ingred"
            android:title="@string/search_by_ingredient"
            android:icon="@drawable/baseline_manage_search_24"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/communicate">
            <menu>
                <group>
                    <item android:id="@+id/nav_about"
                        android:title="@string/about"
                        android:icon="@drawable/baseline_info_24"/>
                    <item android:id="@+id/nav_share"
                        android:title="@string/share"
                        android:icon="@drawable/baseline_share_24"/>
                </group>
            </menu>

        </item>


    </group>

</menu>