<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_tool_menu"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuEnglish"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/english"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItalian"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/italian"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuFrench"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/french"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuGerman"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/german"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSpanish"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/spanish"
        app:showAsAction="never" />

</menu>