<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/search_for_a_cocktail_by_name"
        android:autofillHints="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_of_a_cocktail"
        app:layout_constraintBottom_toBottomOf="@+id/searchTitle"
        app:layout_constraintStart_toEndOf="@+id/searchTitle"
        app:layout_constraintTop_toTopOf="@+id/searchTitle" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="@+id/searchTitle"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>